syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "NotificationService.Presentation.Grpc";

package notifications;

service NotificationService {
  rpc GetNotifications (GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc GetNotification (GetNotificationRequest) returns (Notification);
  rpc GetUnreadCount (GetUnreadCountRequest) returns (GetUnreadCountResponse);
  rpc MarkAsRead (MarkAsReadRequest) returns (google.protobuf.Empty);
  rpc MarkAllAsRead (MarkAllAsReadRequest) returns (google.protobuf.Empty);
}

message GetNotificationsRequest {
  string user_id = 1;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
}

message GetNotificationRequest {
  string notification_id = 1;
}

message GetUnreadCountRequest {
  string user_id = 1;
}

message GetUnreadCountResponse {
  int32 count = 1;
}

message MarkAsReadRequest {
  string notification_id = 1;
}

message MarkAllAsReadRequest {
  string user_id = 1;
}

message Notification {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
  NotificationType type = 5;
  NotificationStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp read_at = 8;
}

enum NotificationType {
  BOOKING_CREATED = 0;
  BOOKING_CANCELLED = 1;
  REMINDER = 2;
}

enum NotificationStatus {
  UNREAD = 0;
  READ = 1;
}